[package]
name = "atakoris"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.17.1"
peroxide = "0.34.1"
petgraph = "0.6.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"


# sefar = { path = "/home/sd/Documents/Rust_apps/atakor_origin/sefar_v002/", fearures = ["show_report"] }
# dataset = { path = "/home/sd/Documents/Rust_apps/dataset/" }

[lib]
name = "atakoris"
crate-type =["rlib", "cdylib"]


[features]
report = []
deep_report = ["report"]
optimization = []
